--- a/homework/pom.xml
+++ b/homework/pom.xml
@@ -2,10 +2,10 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>it.wt</groupId>
-	<artifactId>chess</artifactId>
+	<groupId>de.serr-media</groupId>
+	<artifactId>homework</artifactId>
 	<version>1.0-SNAPSHOT</version>
-	<packaging>jar</packaging>
+<!-- 	<packaging>jar</packaging> -->
 
 	<name>chess</name>
 	<url>http://maven.apache.org</url>
