--- a/.gitignore
+++ b/.gitignore
@@ -6,10 +6,12 @@
 *.ear
 
 #eclipse
-chess/.classpath
-chess/.project
-chess/.settings/
+*/.classpath
+*/.project
+*/.settings/
 
 #maven
-chess/target/*
+*/target/*
 
+.project
+.settings
